# teacher-agent

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt
data/: users.db
data/raw_documents/: 03项目库文档@YOLO代码复现框架.docx  test__00项目库文档@自选项目模版.docx  test__01项目库文档@智能交通监控管理系统.docx  test__02项目库文档@个人知识库助手.docx  test__04项目库文档@中英文翻译系统.docx
knowledge_base/chroma_db/: chroma.sqlite3
knowledge_base/chroma_test/: chroma.sqlite3
knowledge_base/chroma_zhuyicheju/: chroma.sqlite3
knowledge_base/test/chroma_thread_13/: chroma.sqlite3
knowledge_base/test/chroma_thread_15/: chroma.sqlite3
knowledge_base/test/chroma_thread_17/: chroma.sqlite3
knowledge_base/test/chroma_thread_18/: chroma.sqlite3
knowledge_base/test/chroma_thread_19/: chroma.sqlite3
knowledge_base/test/chroma_thread_20/: chroma.sqlite3
knowledge_base/test/chroma_thread_21/: chroma.sqlite3
knowledge_base/test/chroma_thread_22/: chroma.sqlite3
knowledge_base/test/chroma_thread_23/: chroma.sqlite3
knowledge_base/test/chroma_thread_24/: chroma.sqlite3
knowledge_base/test/chroma_thread_25/: chroma.sqlite3
src/: delete.py  generate_title.py  history.py  init.py  knowledge_processor.py  main.py  nameAndPassword.py  rag_agent.py  script.py  search_knowledge.py  thread.py  vector_db.py
src/cola/: Application.py
src/teacher_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
static/css/: style.css
static/js/: app.js  auth.js
templates/: admin.html  admin_login.html  index.html  login.html  register.html
tests/: test.py  test_rag_agent.py
(+53 files in other folders)
